# all-religious-texts

./: .cursorrules  .gitignore  AGENTS.md  ATTRIBUTION.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_LICENSE.md  GEMINI.md  LICENSE  PROMPT.md  README.md  ROADMAP.md  SCHEMA.md  SECURITY.md  SKILLS.md  isha.json  isha.txt  jsonif.py  katha.json  katha.txt  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
api/: openapi.yaml
docs/: adding-languages.md  adding-scriptures.md  api-spec.md  architecture.md  contributing.md  data-standards.md  developer-guide.md  faq.md  folder-structure.md  licensing.md  schemas.md  search-architecture.md  style-guide.md  validation.md
examples/: isha_enriched.json  katha_enriched.json  node_search_example.js  python_query_example.py  sample_verse.json  vector_search_schema.json
metadata/: collections.json  languages.json  licenses.json  religions.json  scripts.json
schemas/: book.schema.json  commentary.schema.json  contributor.schema.json  cross-reference.schema.json  edition.schema.json  language.schema.json  license.schema.json  metadata.schema.json  script.schema.json  translation.schema.json  verse.schema.json
scripts/: bulk_convert.py  format_json.py  generate_checksums.py  link_checker.py  renumber_verses.py
tests/: test_converters.py  test_validators.py
tools/: csv_to_json.py  enrich_dataset.py  epub_parser.py  md_to_json.py  pdf_metadata.py  tei_to_json.py  txt_to_json.py  xml_to_json.py
validators/: __init__.py  run_all.py  validate_filenames.py  validate_ids.py  (+4 more)
(+7 files in other folders)
